Support Optionally Including Properties in toString()
Add a decorator that can be used to customize which properties of an
instance are included when `toString`ing it.

Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "strictPropertyInitialization": true
+    "strictPropertyInitialization": true,
+    "experimentalDecorators": true
 	},
   "fmt": {
     "exclude": ["*.json"]
